--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ header {
   padding: 20px;
 }
 
+.container {
+  max-width: 1400px;
+  margin: 20px auto 20px;
+  padding: 0 20px;
+}
+
 .left-column,
 .right-column {
   display: flex;
@@ -89,50 +95,6 @@ li a {
     display: none;
   }
 }
-
-.gallery {
-  position: relative;
-  width: 100%;
-  height: 800px;
-  overflow: hidden;
-}
-
-.gallery img {
-  width: 100%;
-  height: auto;
-  display: block;
-  position: absolute;
-}
-
-.gallery button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  padding: 10px;
-}
-
-.gallery .prev {
-  left: 10px;
-}
-
-.gallery .next {
-  right: 10px;
-}
-
-/* modal */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 228, 225, 0.5); /* Нежный цвет фона */
-}
-/* отцентровать окно попап */
 
 .modal-content {
   background-color: #fff; /* Белый фон контента */
@@ -220,25 +182,10 @@ html {
   font-size: 1.7vw;
   box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
 }
-@supports (display: grid) {
-  .message {
-    display: none;
-  }
-}
 
 .section {
-  display: none;
-  padding: 2rem;
-}
-@media screen and (min-width: 768px) {
-  .section {
-    padding: 4rem;
-  }
-}
-@supports (display: grid) {
-  .section {
-    display: block;
-  }
+  display: block;
+  margin: 0 auto;
 }
 
 h1 {
@@ -287,6 +234,8 @@ h1 {
 
 .item__details {
   max-width: 100%;
+  max-height: 400px;
+  object-fit: cover;
 }
 .caption {
   position: absolute;
@@ -388,9 +337,7 @@ h1 {
 }
 
 /* отзывы */
-.container__feedbek {
-  max-width: 1400px;
-}
+
 .wrapp {
   display: flex;
   justify-content: center;
@@ -402,11 +349,11 @@ h1 {
   text-align: center;
 }
 
-.wrapp__image {
-  padding: 50px;
-  margin-left: 30px;
+.image-feed {
+  width: 450px;
+  max-width: 100%;
+  object-fit: cover;
 }
-
 /* feed-form */
 .form-feed {
   margin-left: 260px;
@@ -414,11 +361,11 @@ h1 {
 .form-feed2 {
   margin-left: 600px;
 }
-.form-wrap {
+/* .form-wrap {
   display: flex;
   justify-content: stretch;
   align-items: center;
-}
+} */
 .feed-btn a,
 .feed-btn2 a {
   border: none;
@@ -467,7 +414,7 @@ footer {
 }
 .link-phone-footer {
   text-decoration: none;
-  color: #fff;
+  color: #000;
 }
 .photo {
   width: 50%;
@@ -576,16 +523,15 @@ header {
 /* gallery */
 .gallery {
   position: relative;
-  width: 100%;
-  height: 800px;
   overflow: hidden;
+  aspect-ratio: 1/1;
+  width: 100%;
 }
 
 .gallery img {
   width: 100%;
   height: auto;
   display: block;
-  position: absolute;
 }
 
 .gallery button {
@@ -642,6 +588,11 @@ header {
   color: #888;
   font-size: 16px;
 }
+.form-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
 /* медиа запросы   */
 
@@ -656,56 +607,26 @@ header {
   .wrapp {
     width: 100%;
   }
-  .container__feedbek {
-    max-width: 300px;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .section {
-    margin-top: -110px;
-    width: 400px;
-  }
-  .title__feedbek {
-    margin-left: 80px;
-  }
 
   .wrapp {
     flex-direction: column;
     align-items: center;
   }
-  .form-wrap {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    max-width: 400px;
 
-    max-height: fit-content;
-  }
   .feed-btn {
     margin-right: 35px;
-  }
-  .item__details {
-    max-height: 400px;
-  }
-  .form-feed {
-    margin-left: 100px;
   }
 
   .image-feed {
     width: 450px;
   }
   .wrapp__image {
-    max-width: 350px;
-    max-height: 350px;
+    max-width: 100%;
+    object-fit: cover;
   }
 
   .photo {
     display: none;
-  }
-
-  .about-us {
-    padding-left: 50px;
-    width: 300px;
   }
 
   .about-us-text {
@@ -765,24 +686,14 @@ header {
     flex-direction: column;
     align-items: center;
   }
-  .gallery {
-    height: 500px;
-    width: 400px;
-  }
-
-  .form-wrap {
-    max-width: 400px;
-    max-height: fit-content;
-  }
-  .item__details {
-    max-height: 400px;
-  }
-  .form-feed {
-    margin-left: 100px;
-  }
-
-  .form-feed2 {
-    margin-left: 60px;
+  .link-feed {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: inherit;
+    gap: 20px;
+    margin-bottom: 10px;
+    padding-right: 100px;
   }
 
   .photo {
@@ -792,7 +703,7 @@ header {
     background-color: #333232;
     color: #ccc;
     margin-top: 20px;
-    width: 450px;
+
     box-sizing: border-box;
   }
 
@@ -821,7 +732,6 @@ header {
     margin-right: 0; /* Убираем отступ справа */
     margin-bottom: 10px; /* Добавляем отступ снизу */
     padding-bottom: 200px;
-    padding-right: 50px;
   }
 
   .menu ul {
@@ -853,51 +763,23 @@ header {
   .wrapp {
     width: 100%;
   }
-  .container__feedbek {
-    max-width: 300px;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .about-us {
-    padding-left: 50px;
-    width: 300px;
-  }
-  .section {
-    margin-top: -110px;
-    width: 350px;
-  }
+
   .title__feedbek {
-    margin-left: 80px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .wrapp {
     flex-direction: column;
     align-items: center;
   }
-  .form-wrap {
+  /* .form-wrap {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 400px;
-
-    max-height: fit-content;
-  }
+  } */
   .feed-btn {
     margin-right: 35px;
-  }
-  .item__details {
-    max-height: 400px;
-  }
-  .form-feed {
-    margin-left: 100px;
-  }
-
-  .image-feed {
-    width: 450px;
-  }
-  .wrapp__image {
-    max-width: 400px;
-    max-height: 350px;
   }
 
   .photo {
@@ -961,25 +843,6 @@ header {
     flex-direction: column;
     align-items: center;
   }
-  .gallery {
-    height: 500px;
-    width: 400px;
-  }
-
-  .form-wrap {
-    max-width: 400px;
-    max-height: fit-content;
-  }
-  .item__details {
-    max-height: 400px;
-  }
-  .form-feed {
-    margin-left: 100px;
-  }
-
-  .form-feed2 {
-    margin-left: 60px;
-  }
 
   .photo {
     display: none;
@@ -988,7 +851,6 @@ header {
     background-color: #333232;
     color: #ccc;
     margin-top: 20px;
-    width: 400px;
     box-sizing: border-box;
   }
 
@@ -1017,7 +879,6 @@ header {
     margin-right: 0; /* Убираем отступ справа */
     margin-bottom: 10px; /* Добавляем отступ снизу */
     padding-bottom: 200px;
-    padding-right: 50px;
   }
 
   .menu ul {
@@ -1035,5 +896,9 @@ header {
 
   .menu li:hover {
     color: red;
+  }
+  .link-phone-footer {
+    text-decoration: none;
+    color: #fff;
   }
 }
