--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    max-width: 100%;
+    width: 100%;
     height: 115px;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000; /* Число может быть любым, чтобы гарантировать, что элемент будет выше других */
@@ -837,9 +837,6 @@ header {
     height: 170px;
     font-size: 13px;
   }
-  .wrapp {
-    width: 100%;
-  }
 
   .title__feedbek {
     margin-left: auto;
@@ -849,9 +846,6 @@ header {
   .wrapp {
     flex-direction: column;
     align-items: center;
-  }
-  .form-wrap {
-    gap: 20px;
   }
 
   .form-feed {
@@ -904,16 +898,15 @@ header {
     color: cornflowerblue;
   }
 
-  .wrapp {
-    max-width: 100%;
-    flex-direction: column;
-    align-items: center;
-  }
-
   .form-feed2 {
     margin-left: 60px;
   }
-
+  .about-us-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    margin: 0 auto;
+  }
   .about-us-text {
     font-size: 14px;
   }
